--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -25,14 +25,12 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
-							<li><a href="research.html">Findings</a></li>
-							<li><a href="publications.html">Publications</a></li>
-							<li><a href="awards.html">Awards</a></li>
-							<li><a href="members.html">Members</a></li>
-							<li><a href="members.html">Gallery</a></li>
-							<li><a href="recruitment.html">Join us</a></li>
+							<li><a href="../../index.html">Home</a></li>
+							<li><a href="../research/research.html">Research</a></li>
+							<li><a href="./publications.html">Publications</a></li>
+							<li><a href="../members/members.html">Members</a></li>
+							<li><a href="#">Gallery</a></li>
+							<li><a href="#">Join us</a></li>
 						</ul>
 					</nav>
 
@@ -176,7 +174,7 @@
 									</div>
 								</div>
 							</section>
-iii
+
 							<!-- Reference 1 -->
 							<section style="height: 10%;">
 								<a href="https://doi.org/10.1038/380708a0" class="image">
