--- a/contents/research/research.html
+++ b/contents/research/research.html
@@ -25,14 +25,12 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
+							<li><a href="../../index.html">Home</a></li>
 							<li><a href="research.html">Research</a></li>
-							<!-- <li><a href="research.html">Findings</a></li> -->
-							<li><a href="publications.html">Publications</a></li>
-							<!-- <li><a href="awards.html">Awards</a></li> -->
-							<li><a href="members.html">Members</a></li>
-							<li><a href="members.html">Gallery</a></li>
-							<li><a href="recruitment.html">Join us</a></li>
+							<li><a href="../publications/publications.html">Publications</a></li>
+							<li><a href="../members/members.html">Members</a></li>
+							<li><a href="#">Gallery</a></li>
+							<li><a href="#">Join us</a></li>
 						</ul>
 					</nav>
 
@@ -47,8 +45,9 @@
 								<h1>Research Focus</h1>
 							</header>
 							<div class="content">
-								<p>sentence<br />
-								sentence</p>
+								<p>
+									ROS & Root development
+								</p>
 							</div>
 						</div>
 					</section>
@@ -57,78 +56,95 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<!-- <section id="one">
 								<div class="inner">
 									<header>
 										<h2>Molecular biology, Arabidopsis</h2>
 									</header>
-									<p>nas massa vel lacinia pellentesque loi eum sem. In efficitur ligula tate urna.</p>
+									<p>some introduction</p>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
+
+								<!-- Understanding the regulation mechanism of root meristem development by RGF1 peptide -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									<a href="./Understanding the regulation mechanism of root meristem development by RGF1 peptide.html" class="image">
+										<img src="./RGF1_RITF1.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header>
 												<h3>Understanding the regulation mechanism of root meristem development by RGF1 peptide</h3>
 											</header>
-											<p>Stem cell niche is maintained by the signaling networks of the peptide hormone, Root Meristem Growth Factor 1 (RGF1). 
+											<p>
+												Stem cell niche is maintained by the signaling networks of the peptide hormone, Root Meristem Growth Factor 1 (RGF1). 
 												Recently, I discovered a series of signaling events following RGF1 action. 
-												There are three major discoveries...</p>
+												There are three major discoveries...
+											</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="./Understanding the regulation mechanism of root meristem development by RGF1 peptide.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
+
+								<!-- Identify transcripts for adaptation to abiotic stress in developmental zones -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+									<a href="./Identify transcripts for adaptation to abiotic stress in developmental zones.html" class="image">
+										<img src="./Identify transcripts.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
-											<header class="major">
-												<h3>Rhoncus magna</h3>
+											<header>
+												<h3>Identify transcripts for adaptation to abiotic stress in developmental zones</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												The balance of the ROS signals, superoxide in the meristematic zone and hydrogen peroxide in the differentiation zone, 
+												determines the transition from cell division to cell elongation. 
+												However, this balance is altered during periods of stress...
+											</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="./Identify transcripts for adaptation to abiotic stress in developmental zones.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
+
+								<!-- Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis -->
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<a href="./Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis.html" class="image">
+										<img src="./live_imaging.png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
-											<header class="major">
-												<h3>Sed nunc ligula</h3>
+											<header>
+												<h3>Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												Exposure to various abiotic stresses results in accumulation of reactive oxygen species (ROS) in plants, 
+												which has a signaling role in the regulation of plant development for adaptation...
+											</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="./Understanding the mechanism modulating ROS distributions under abiotic stress by live-imaging analysis.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
+
+
 							</section>
 
 						<!-- Three -->
 							<section id="three">
 								<div class="inner">
-									<header class="major">
-										<h2>Massa libero</h2>
+									<!-- <header class="major">
+										<h2>Want to join us ?</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p></p> -->
 									<ul class="actions">
-										<li><a href="generic.html" class="button next">Get Started</a></li>
+										<li><a href="#" class="button next">Join Us</a></li>
 									</ul>
 								</div>
 							</section>
