--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Masashi Yamada</title>
@@ -61,7 +56,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="./images/research.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/research/research.html" class="link">Research</a></h3>
@@ -71,7 +66,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="./images/publication.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/publications/publications.html" class="link">Publications</a></h3>
@@ -81,7 +76,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="./images/members.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="./contents/members/members.html" class="link">Members</a></h3>
@@ -91,7 +86,7 @@
 
 								<article>
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="./images/gallery.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="#.html" class="link">Gallery</a></h3>
@@ -164,17 +159,17 @@
 					</section>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<div class="inner">
 							<ul class="icons">
 								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<!-- <li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li> -->
-								<!-- <li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li> -->
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
-					</footer>
+					</footer> -->
 
 			</div>
 
