--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -45,8 +45,10 @@
 								<h1>Publications</h1>
 							</header>
 							<!-- <div class="content">
-								<p>Lorem ipsum dolor sit amet nullam consequat<br />
-								sed veroeros. tempus adipiscing nulla.</p>
+								<p>
+									Lorem ipsum dolor sit amet nullam consequat<br />
+									sed veroeros. tempus adipiscing nulla.
+								</p>
 							</div> -->
 						</div>
 					</section>
@@ -54,6 +56,147 @@
 				<!-- Main -->
 					<div id="main">
 						<section id="two" class="spotlights">
+
+							<!-- Reference 16 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1111/tpj.16245" class="image">
+									<img src="./y2023_tpj.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>PECT1, a rate-limiting enzyme in phosphatidylethanolamine biosynthesis, is involved in the regulation of stomatal movement in <i>Arabidopsis</i></h3>
+										</header>
+										<p>Negi J, Obata T, Nishimura S, Song B, Yamagaki S, Ono Y, Okabe M, Hoshino N, Fukatsu K, Tabata R, 
+											Yamaguchi K, Shigenobu S, <b>Yamada M</b>, Hasebe M, Sawa S, Kinoshita T, Nishida I, and Iba K (2023)<br />
+											<i>The Plant Journal</i>, 1:1-12
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1111/tpj.16245" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 15 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.3389/fpls.2023.1099816" class="image">
+									<img src="./y2023_fpls.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>NAC103 mutation alleviates DNA damage in an <i>Arabidopsis thaliana</i> mutant sensitive to excess boron</h3>
+										</header>
+										<p>Sotta N, Sakamoto T, Kamiya T, Tabata R, Yamaguchi K, Shigenobu S, <b>Yamada M</b>, Hasebe M, Sawa S, and Fujiwara T (2023)<br />
+											<i>Frontiers in Plant Science</i>, 14:21-23
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.3389/fpls.2023.1099816" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 14 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.3390/genes12010022" class="image">
+									<img src="./y2021_genes.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>The Roles of Peptide Hormones and Their Receptors during Plant Root Development</h3>
+										</header>
+										<p>Hsiao YC and <b>Yamada M</b> (2021)<br />
+											<i>Genes</i>, 12(1):22
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.3390/genes12010022" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 13 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1038/s41586-019-1819-6" class="image">
+									<img src="./y2020_nature.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>RGF1 controls root meristem size through ROS signalling</h3>
+										</header>
+										<p><b>Yamada M</b>, Han X, and Benfey PN (2020)<br />
+											<i>Nature</i>, 577(7788):85-88
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1038/s41586-019-1819-6" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 12 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1101/244947" class="image">
+									<img src="./y2017_bioRxiv.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>Root meristem Growth Factor 1 (RGF1) controls root meristem size through reactive oxygen species (ROS) signaling</h3>
+										</header>
+										<p><b>Yamada M</b>, Han X, and Benfey PN (2017)<br />
+											<i>bioRxiv</i>, doi: https://doi.org/10.1101/244947
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1101/244947" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 11 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1016/j.devcel.2016.10.012" class="image">
+									<img src="./y2016_dev-cell.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>High-Resolution Expression Map of the <i>Arabidopsis</i> Root Reveals Alternative Splicing and lincRNA Regulation</h3>
+										</header>
+										<p>Li S*, <b>Yamada M*</b>, Han X, Ohler U, and Benfey PN (2016)<br />
+											<i>Developmental Cell</i>, 39(4):508-522
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1016/j.devcel.2016.10.012" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 10 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1007/s10265-016-0894-0" class="image">
+									<img src="./y2016_jpr.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>Functions of long intergenic non-coding (linc) RNAs in plants</h3>
+										</header>
+										<p><b>Yamada M</b> (2016)<br />
+											<i>Journal of Plant Research</i>, 130:67-73
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1007/s10265-016-0894-0" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
 
 							<!-- Reference 7 -->
 							<section style="height: 10%;">
@@ -65,8 +208,8 @@
 										<header>
 											<h3>The Function of the CLE peptides in Plant Development and Plant-Microbe Interactions</h3>
 										</header>
-										<p>Betsuyaku S, Sawa S, <b>Yamada M</b> (2011)<br />
-											<i>Arabidopsis Book</i>, 2011;9, e0149
+										<p>Betsuyaku S, Sawa S, and <b>Yamada M</b> (2011)<br />
+											<i>Arabidopsis Book</i>, 9, e0149
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1199/tab.0149" class="button">Learn more</a></li>
@@ -86,7 +229,7 @@
 											<h3>The TRANSPORT INHIBITOR RESPONSE2 gene is required for auxin synthesis and diverse aspects of plant development</h3>
 										</header>
 										<p><b>Yamada M</b>, Greenham K, Prigge MJ, Jensen PJ and Estelle M (2009)<br />
-											<i>Plant Physiol</i>, 151, 168-79
+											<i>Plant Physiol</i>, 151:168-79
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1104/pp.109.138859" class="button">Learn more</a></li>
@@ -105,8 +248,8 @@
 										<header>
 											<h3>Plant development is regulated by a family of auxin receptor F box proteins</h3>
 										</header>
-										<p>Dharmasiri N, Dharmasiri S, Weijers D, Lechner E, <b>Yamada M</b>, Hobbie L, Ehrismann JS, Jurgens G, Estelle M (2005)<br />
-											<i>Dev Cell</i>, 2005 Jul; 9(1), 109-19
+										<p>Dharmasiri N, Dharmasiri S, Weijers D, Lechner E, <b>Yamada M</b>, Hobbie L, Ehrismann JS, Jurgens G, and Estelle M (2005)<br />
+											<i>Developmental Cell</i>, 9(1), 109-19
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1016/j.devcel.2005.05.014" class="button">Learn more</a></li>
@@ -125,8 +268,8 @@
 										<header>
 											<h3>Sites and regulation of auxin biosynthesis in Arabidopsis roots</h3>
 										</header>
-										<p>Ljung K, Hull AK, Celenza J, <b>Yamada M</b>, Estelle M, Normanly J, Sandberg G (2005)<br />
-											<i>Plant Cell</i>, 2005 Apr; 17(4), 1090-104
+										<p>Ljung K, Hull AK, Celenza J, <b>Yamada M</b>, Estelle M, Normanly J, and Sandberg G (2005)<br />
+											<i>Plant Cell</i>, 17(4), 1090-104
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1105/tpc.104.029272" class="button">Learn more</a></li>
@@ -145,8 +288,8 @@
 										<header>
 											<h3>Quantification of protein A-gold staining for peroxisomal enzymes by confocal laser scanning microscopy</h3>
 										</header>
-										<p>Ogiwara N, Usuda N, <b>Yamada M</b>, Johkura K, Kametani K, Nakazawa A (1999)<br />
-											<i>J Histochem Cytochem</i>, 1999 Oct; 47(10),1343-9
+										<p>Ogiwara N, Usuda N, <b>Yamada M</b>, Johkura K, Kametani K, and Nakazawa A (1999)<br />
+											<i>J Histochem Cytochem</i>, 47(10),1343-9
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1177/002215549904701014" class="button">Learn more</a></li>
@@ -165,8 +308,8 @@
 										<header>
 											<h3>Maternal Pumilio acts together with Nanos in germline development in Drosophila embryos</h3>
 										</header>
-										<p>Asaoka-Taguchi M*, <b>Yamada M*</b>, Nakamura A, Hanyu K, Kobayashi S (1999)<br />
-											<i>Nat Cell Biol</i>, 1999 Nov; 1(7), 431-7
+										<p>Asaoka-Taguchi M*, <b>Yamada M*</b>, Nakamura A, Hanyu K, and Kobayashi S (1999)<br />
+											<i>Nat Cell Biol</i>, 1(7), 431-7
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1038/15666" class="button">Learn more</a></li>
@@ -186,8 +329,8 @@
 											<h3>Essential role of the posterior morphogen nanos for germline development in Drosophila</h3>
 										</header>
 										<p>
-											Kobayashi S*, <b>Yamada M*</b>, Asaoka M*, Kitamura T (1996)<br />
-											<i>Nature</i>, 1996 Apr 25; 380(6576), 708-11
+											Kobayashi S*, <b>Yamada M*</b>, Asaoka M*, and Kitamura T (1996)<br />
+											<i>Nature</i>, 380(6576), 708-11
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1038/380708a0" class="button">Learn more</a></li>
@@ -199,6 +342,55 @@
 						</section>
 					</div>
 			</div>
+
+
+			<!-- Contact -->
+			<section id="contact">
+				<div class="inner">
+
+					<section class="split">
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-envelope"></span>
+								<h3>Email</h3>
+								<a href="#">masyamad4@gmail.com</a><br />
+								<a href="#">masyamad@sinica.edu.tw</a>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-phone"></span>
+								<h3>Phone</h3>
+								<span>+886 6-3032280 (ext. 216)</span>
+							</div>
+						</section>
+					</section>
+
+					<section class="split">
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-home"></span>
+								<h3>Address 1</h3>
+								<span>
+									128, Academia Road, Section 2, Nankang,<br />
+									Taipei 11529, Taiwan
+								</span>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-home"></span>
+								<h3>Address 2</h3>
+								<span>
+									100, Sec. 1, Guiren 13th Rd., Guiren Dist.,<br />
+									Tainan City 711, Taiwan
+								</span>
+							</div>
+						</section>
+					</section>
+
+				</div>
+			</section>
 
 		<!-- Scripts -->
 			<script src="../../assets/js/jquery.min.js"></script>
