--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
+							<li><a href="./index.html">Home</a></li>
+							<li><a href="./contents/research/research.html">Research</a></li>
 							<li><a href="./contents/publications/publications.html">Publications</a></li>
 							<li><a href="./contents/members/members.html">Members</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
