--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -198,6 +198,46 @@
 								</div>
 							</section>
 
+							<!-- Reference 9 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.3389/fpls.2016.00834" class="image">
+									<img src="./y2016_fpls.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>Polyamine Resistance Is Increased by Mutations in a Nitrate Transporter Gene NRT1.3 (AtNPF6.4) in <i>Arabidopsis thaliana</i></h3>
+										</header>
+										<p>Tong W, Imai A, Tabata R, Shigenobu S, Yamaguchi K, <b>Yamada M</b>, Hasebe M, Sawa S, Motose H, and Takahashi T (2016)<br />
+											<i>Frontiers in Plant Science</i>, 7:834
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.3389/fpls.2016.00834" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
+							<!-- Reference 8 -->
+							<section style="height: 10%;">
+								<a href="https://doi.org/10.1111/nph.13520" class="image">
+									<img src="./y2015_new-phytol.jpg" alt="" data-position="center center" />
+								</a>
+								<div class="content">
+									<div class="inner">
+										<header>
+											<h3>BAM 1 and RECEPTOR-LIKE PROTEIN KINASE 2 constitute a signaling pathway and modulate CLE peptide-triggered growth inhibition in <i>Arabidopsis</i> root</h3>
+										</header>
+										<p>Shimizu N, Ishida T, <b>Yamada M</b>, Shigenobu S, Tabata R, Kinoshita A, Yamaguchi K, Hasebe M, Mitsumasu K, and Sawa S (2015)<br />
+											<i>New Phytologist</i>, 208(4):1104-1113
+										</p>
+										<ul class="actions">
+											<li><a href="https://doi.org/10.1111/nph.13520" class="button">Learn more</a></li>
+										</ul>
+									</div>
+								</div>
+							</section>
+
 							<!-- Reference 7 -->
 							<section style="height: 10%;">
 								<a href="https://doi.org/10.1199/tab.0149" class="image">
@@ -249,7 +289,7 @@
 											<h3>Plant development is regulated by a family of auxin receptor F box proteins</h3>
 										</header>
 										<p>Dharmasiri N, Dharmasiri S, Weijers D, Lechner E, <b>Yamada M</b>, Hobbie L, Ehrismann JS, Jurgens G, and Estelle M (2005)<br />
-											<i>Developmental Cell</i>, 9(1), 109-19
+											<i>Developmental Cell</i>, 9(1):109-19
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1016/j.devcel.2005.05.014" class="button">Learn more</a></li>
@@ -269,7 +309,7 @@
 											<h3>Sites and regulation of auxin biosynthesis in Arabidopsis roots</h3>
 										</header>
 										<p>Ljung K, Hull AK, Celenza J, <b>Yamada M</b>, Estelle M, Normanly J, and Sandberg G (2005)<br />
-											<i>Plant Cell</i>, 17(4), 1090-104
+											<i>Plant Cell</i>, 17(4):1090-104
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1105/tpc.104.029272" class="button">Learn more</a></li>
@@ -289,7 +329,7 @@
 											<h3>Quantification of protein A-gold staining for peroxisomal enzymes by confocal laser scanning microscopy</h3>
 										</header>
 										<p>Ogiwara N, Usuda N, <b>Yamada M</b>, Johkura K, Kametani K, and Nakazawa A (1999)<br />
-											<i>J Histochem Cytochem</i>, 47(10),1343-9
+											<i>J Histochem Cytochem</i>, 47(10):1343-9
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1177/002215549904701014" class="button">Learn more</a></li>
@@ -309,7 +349,7 @@
 											<h3>Maternal Pumilio acts together with Nanos in germline development in Drosophila embryos</h3>
 										</header>
 										<p>Asaoka-Taguchi M*, <b>Yamada M*</b>, Nakamura A, Hanyu K, and Kobayashi S (1999)<br />
-											<i>Nat Cell Biol</i>, 1(7), 431-7
+											<i>Nat Cell Biol</i>, 1(7):431-7
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1038/15666" class="button">Learn more</a></li>
@@ -321,7 +361,7 @@
 							<!-- Reference 1 -->
 							<section style="height: 10%;">
 								<a href="https://doi.org/10.1038/380708a0" class="image">
-									<img src="./y1996_nature.jpg" alt="" data-position="25% 25%" />
+									<img src="./y1996_nature.jpg" alt="" data-position="center center" />
 								</a>
 								<div class="content">
 									<div class="inner">
@@ -330,7 +370,7 @@
 										</header>
 										<p>
 											Kobayashi S*, <b>Yamada M*</b>, Asaoka M*, and Kitamura T (1996)<br />
-											<i>Nature</i>, 380(6576), 708-11
+											<i>Nature</i>, 380(6576):708-11
 										</p>
 										<ul class="actions">
 											<li><a href="https://doi.org/10.1038/380708a0" class="button">Learn more</a></li>
