--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -199,7 +199,7 @@
 							</section>
 
 							<!-- Reference 9 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.3389/fpls.2016.00834" class="image">
 									<img src="./y2016_fpls.jpg" alt="" data-position="center center" />
 								</a>
@@ -219,7 +219,7 @@
 							</section>
 
 							<!-- Reference 8 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1111/nph.13520" class="image">
 									<img src="./y2015_new-phytol.jpg" alt="" data-position="center center" />
 								</a>
@@ -239,7 +239,7 @@
 							</section>
 
 							<!-- Reference 7 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1199/tab.0149" class="image">
 									<img src="./y2011_plant-microbe.jpg" alt="" data-position="center center" />
 								</a>
@@ -259,7 +259,7 @@
 							</section>
 
 							<!-- Reference 6 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1104/pp.109.138859" class="image">
 									<img src="./y2009_plant-physiol.jpg" alt="" data-position="center center" />
 								</a>
@@ -279,7 +279,7 @@
 							</section>
 
 							<!-- Reference 5 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1016/j.devcel.2005.05.014" class="image">
 									<img src="./y2005_dev-cell.jpg" alt="" data-position="center center" />
 								</a>
@@ -299,7 +299,7 @@
 							</section>
 
 							<!-- Reference 4 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1105/tpc.104.029272" class="image">
 									<img src="./y2005_plant-cell.jpg" alt="" data-position="center center" />
 								</a>
@@ -319,7 +319,7 @@
 							</section>
 
 							<!-- Reference 3 -->
-							<section style="height: 10%;">
+							<section style="height: 1%;">
 								<a href="https://doi.org/10.1177/002215549904701014" class="image">
 									<img src="./y1999_histochem.jpg" alt="" data-position="center center" />
 								</a>
@@ -339,7 +339,7 @@
 							</section>
 
 							<!-- Reference 2 -->
-							<section style="height: 10%;">
+							<section style="height: 0%;">
 								<a href="https://doi.org/10.1038/15666" class="image">
 									<img src="./y1999_nat-cell-biol.jpg" alt="" data-position="center center" />
 								</a>
@@ -350,16 +350,18 @@
 										</header>
 										<p>Asaoka-Taguchi M*, <b>Yamada M*</b>, Nakamura A, Hanyu K, and Kobayashi S (1999)<br />
 											<i>Nat Cell Biol</i>, 1(7):431-7
+											<br><br>
+											<a href="https://doi.org/10.1038/15666" class="button">Learn more</a>
 										</p>
-										<ul class="actions">
+										<!-- <ul class="actions">
 											<li><a href="https://doi.org/10.1038/15666" class="button">Learn more</a></li>
-										</ul>
+										</ul> -->
 									</div>
 								</div>
 							</section>
 
 							<!-- Reference 1 -->
-							<section style="height: 10%;">
+							<section style="height: 0%;">
 								<a href="https://doi.org/10.1038/380708a0" class="image">
 									<img src="./y1996_nature.jpg" alt="" data-position="center center" />
 								</a>
@@ -371,10 +373,12 @@
 										<p>
 											Kobayashi S*, <b>Yamada M*</b>, Asaoka M*, and Kitamura T (1996)<br />
 											<i>Nature</i>, 380(6576):708-11
+											<br><br>
+											<a href="https://doi.org/10.1038/380708a0" class="button">Learn more</a>
 										</p>
-										<ul class="actions">
+										<!-- <ul class="actions">
 											<li><a href="https://doi.org/10.1038/380708a0" class="button">Learn more</a></li>
-										</ul>
+										</ul> -->
 									</div>
 								</div>
 							</section>
