--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 							<li><a href="./contents/research/research.html">Research</a></li>
 							<li><a href="./contents/publications/publications.html">Publications</a></li>
 							<li><a href="./contents/members/members.html">Members</a></li>
-							<li><a href="gallery.html">Gallery</a></li>
+							<li><a href="./contents/gallery/gallery.html">Gallery</a></li>
 							<li><a href="recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" class="major">
+					<section id="banner" class="major" style="background-image: url('./contents/gallery/2024/bg_img.jpg');">
 						<div class="inner">
 							<header class="major">
 								<h1>Hi</h1>
@@ -89,7 +89,7 @@
 										<img src="./images/gallery.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="#.html" class="link">Gallery</a></h3>
+										<h3><a href="./contents/gallery/gallery.html" class="link">Gallery</a></h3>
 										<p>Happy-hour</p>
 									</header>
 								</article>
