--- a/contents/gallery/gallery.html
+++ b/contents/gallery/gallery.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="../../images/myicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="../../assets/css/gallery.css" />
 		<link rel="stylesheet" href="../../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="../../assets/css/noscript.css" /></noscript>
 	</head>
@@ -14,7 +15,7 @@
 		<div id="wrapper">
 
 			<!-- Header -->
-			<header id="header" class="alt style3">
+			<header id="header" class="alt style4">
 				<a href="../../index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
 				<nav>
 					<a href="#menu">Menu</a>
@@ -27,20 +28,20 @@
 					<li><a href="../../index.html">Home</a></li>
 					<li><a href="../research/research.html">Research</a></li>
 					<li><a href="../publications/publications.html">Publications</a></li>
-					<li><a href="#">Members</a></li>
-					<li><a href="../gallery/gallery.html">Gallery</a></li>
+					<li><a href="../members/members.html">Members</a></li>
+					<li><a href="#">Gallery</a></li>
 					<li><a href="../recruitment/recruitment.html">Join us</a></li>
 				</ul>
 			</nav>
 
 			<!-- Banner -->
-			<section id="banner" class="major style3">
+			<section id="banner" class="style4" style="background-image: url('./2024/bg_img.jpg');">
 				<div class="inner">
 					<header class="major">
-						<h1>Members</h1>
+						<h1>Gallery</h1>
 					</header>
 					<div class="content">
-						<p>Members</p>
+						<p>Happy-hours</p>
 					</div>
 				</div>
 			</section>
@@ -48,81 +49,31 @@
 			<!-- Main -->
 			<div id="main">
 
-				<!-- Instructor -->
-				<section id="instructor" class="instructor">
-					<article style="width: 100%;">
-						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="#" class="link">Masashi Yamada</a></h3>
-							<p>Principal Investigator</p>
-						</header>
-					</article>
-				</section>
+				<!-- Year -->
+				<section id="one" class="gallery_tiles">
 
-				<!-- Crew -->
-				<section id="one" class="members">
-					<!-- Member 1 -->
+					<!-- 2024 -->
 					<article>
 						<span class="image">
-							<img src="images/pic01.jpg" alt="" />
+							<img src="./2024/bg_img.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="#" class="link">Yu-Chun</a></h3>
-							<p>Post-Doc</p>
+							<h3><a href="#" class="link">2024</a></h3>
+							<p></p>
 						</header>
 					</article>
-					<!-- Member 2 -->
+
+					<!-- 2023 -->
 					<article>
-						<span class="image">
-							<img src="images/pic02.jpg" alt="" />
+						<span class="image" style="margin-right: 1%; margin-bottom: 1%;">
+							<img src="./2023/bg_img.jpg" alt=""/>
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Joon-Keat</a></h3>
-							<p>Post-Doc</p>
+							<h3><a href="landing.html" class="link">2023</a></h3>
+							<p></p>
 						</header>
 					</article>
-					<!-- Member 3 -->
-					<article>
-						<span class="image">
-							<img src="images/pic03.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="landing.html" class="link">Hsiao-Yu</a></h3>
-							<p>Research Assistant</p>
-						</header>
-					</article>
-					<!-- Member 4 -->
-					<article>
-						<span class="image">
-							<img src="images/pic04.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="landing.html" class="link">Jhenny</a></h3>
-							<p>Research Assistant</p>
-						</header>
-					</article>
-					<!-- Member 5 -->
-					<article>
-						<span class="image">
-							<img src="images/pic05.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="landing.html" class="link">Geena</a></h3>
-							<p>Graduate Student</p>
-						</header>
-					</article>
-					<!-- Member 6 -->
-					<article>
-						<span class="image">
-							<img src="images/pic06.jpg" alt="" />
-						</span>
-						<header class="major">
-							<h3><a href="landing.html" class="link">Coming Soon</a></h3>
-							<p>Graduate Student</p>
-						</header>
-					</article>
+					
 				</section>
 
 				<!-- Two -->
