--- a/contents/recruitment/recruitment.html
+++ b/contents/recruitment/recruitment.html
@@ -33,6 +33,21 @@
 						</ul>
 					</nav>
 
+				<!-- Banner -->
+					<section id="banner" class="major" style="background-image: url('./ABRC_bg_img.png');">
+						<div class="inner">
+							<header class="major">
+								<h1>Recruitment</h1>
+							</header>
+							<!-- <div class="content">
+								<p>Arabidopsis root development</p>
+								<ul class="actions">
+									<li><a href="#one" class="button next scrolly">About us</a></li>
+								</ul>
+							</div>
+						</div> -->
+					</section>
+
 				<!-- Main -->
 					<div id="main" class="alt">
 
@@ -41,21 +56,81 @@
 								<div class="inner">
 
 									<header>
-										<h1>pos1</h1>
+										<h1>Post-doc</h1>
 									</header>
-									
 									<p style="text-indent: 2em;">
 										pos1 
 									</p>
+
+									<hr>
+
+									<header>
+										<h1>Research Assistant</h1>
+									</header>
 									<p style="text-indent: 2em;">
-										pos1
+										pos1 
 									</p>
+
 									<span class="image main"><img src="#" alt="" /></span>
 									
 								</div>
 							</section>
 
 					</div>
+
+					<!-- Contact -->
+					<section id="contact">
+						<div class="inner">
+
+							<section class="split">
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-envelope"></span>
+										<h3>Email</h3>
+										<a href="#">masyamad4@gmail.com</a><br />
+										<a href="#">masyamad@sinica.edu.tw</a>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-phone"></span>
+										<h3>Phone</h3>
+										<span>+886 6-3032280 (ext. 216)</span>
+									</div>
+								</section>
+							</section>
+
+							<section class="split">
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
+										<h3>Address 1</h3>
+										<span>
+											128, Academia Road, Section 2, Nankang,<br />
+											Taipei 11529, Taiwan
+										</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
+										<h3>Address 2</h3>
+										<span>
+											100, Sec. 1, Guiren 13th Rd., Guiren Dist.,<br />
+											Tainan City 711, Taiwan
+										</span>
+									</div>
+								</section>
+							</section>
+
+						</div>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="image main" style="margin: 0;"><img src="./ABRC_logo.gif" alt="" /></span>
+						<span class="image main" style="margin: 0;"><img src="./ABRC_bg_img.png" alt="" /></span>
+					</footer>
 
 			</div>
 
