--- a/contents/members/members.html
+++ b/contents/members/members.html
@@ -79,7 +79,7 @@
 							<img src="images/pic02.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Joon-Keat</a></h3>
+							<h3><a href="#" class="link">Joon-Keat</a></h3>
 							<p>Post-Doc</p>
 						</header>
 					</article>
@@ -89,7 +89,7 @@
 							<img src="images/pic03.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Hsiao-Yu</a></h3>
+							<h3><a href="#" class="link">Hsiao-Yu</a></h3>
 							<p>Research Assistant</p>
 						</header>
 					</article>
@@ -99,7 +99,7 @@
 							<img src="images/pic04.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Jhenny</a></h3>
+							<h3><a href="#" class="link">Jhenny</a></h3>
 							<p>Research Assistant</p>
 						</header>
 					</article>
@@ -109,7 +109,7 @@
 							<img src="images/pic05.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Geena</a></h3>
+							<h3><a href="#" class="link">Geena</a></h3>
 							<p>Graduate Student</p>
 						</header>
 					</article>
@@ -119,7 +119,7 @@
 							<img src="images/pic06.jpg" alt="" />
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">Coming Soon</a></h3>
+							<h3><a href="#" class="link">Coming Soon</a></h3>
 							<p>Graduate Student</p>
 						</header>
 					</article>
@@ -133,7 +133,7 @@
 						</header> -->
 						<!-- <p>Some introduction</p> -->
 						<ul class="actions">
-							<li><a href="#.html" class="button next">Join us</a></li>
+							<li><a href="../recruitment/recruitment.html" class="button next">Join us</a></li>
 						</ul>
 					</div>
 				</section>
