--- a/contents/gallery/gallery.html
+++ b/contents/gallery/gallery.html
@@ -69,7 +69,7 @@
 							<img src="./2023/bg_img.jpg" alt=""/>
 						</span>
 						<header class="major">
-							<h3><a href="landing.html" class="link">2023</a></h3>
+							<h3><a href="#" class="link">2023</a></h3>
 							<p></p>
 						</header>
 					</article>
@@ -84,7 +84,7 @@
 						</header> -->
 						<!-- <p>Some introduction</p> -->
 						<ul class="actions">
-							<li><a href="#.html" class="button next">Join us</a></li>
+							<li><a href="../recruitment/recruitment.html" class="button next">Join us</a></li>
 						</ul>
 					</div>
 				</section>
