--- a/contents/publications/publications.html
+++ b/contents/publications/publications.html
@@ -29,8 +29,8 @@
 							<li><a href="../research/research.html">Research</a></li>
 							<li><a href="./publications.html">Publications</a></li>
 							<li><a href="../members/members.html">Members</a></li>
-							<li><a href="#">Gallery</a></li>
-							<li><a href="#">Join us</a></li>
+							<li><a href="../gallery/gallery.html">Gallery</a></li>
+							<li><a href="../recruitment/recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
 
