--- a/contents/recruitment/postdoc.html
+++ b/contents/recruitment/postdoc.html
@@ -40,10 +40,7 @@
 							<h1>Post-doc</h1>
 						</header>
 						<div class="content">
-							<p>Arabidopsis root development</p>
-							<ul class="actions">
-								<li><a href="#one" class="button next scrolly">About us</a></li>
-							</ul>
+							<p>Life Science, Biotechnology, Bioinformatics, Microbiology</p>
 						</div>
 					</div>
 				</section>
@@ -56,10 +53,9 @@
 						<div class="inner">
 
 							<header>
-								<h1>Post-doc</h1>
+								<h1>Job Description</h1>
 							</header>
-
-							<h3>Job Description</h3>
+							
 							<p style="text-indent: 2em;">
 								The postdoctoral position at the Southern Taiwan Biotechnology Center will involve researching the function of Root Growth Factor 1 (RGF1) peptide in the root meristem. 
 								Successful candidates will have the opportunity to participate in one or more of the following projects:
