--- a/contents/research/research.html
+++ b/contents/research/research.html
@@ -16,7 +16,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style1">
-						<a href="index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
+						<a href="../../index.html" class="logo"><strong>MY</strong> <span>LAB</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -26,11 +26,11 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="../../index.html">Home</a></li>
-							<li><a href="research.html">Research</a></li>
+							<li><a href="#">Research</a></li>
 							<li><a href="../publications/publications.html">Publications</a></li>
 							<li><a href="../members/members.html">Members</a></li>
-							<li><a href="#">Gallery</a></li>
-							<li><a href="#">Join us</a></li>
+							<li><a href="../gallery/gallery.html">Gallery</a></li>
+							<li><a href="../recruitment/recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
 
@@ -144,7 +144,7 @@
 									</header>
 									<p></p> -->
 									<ul class="actions">
-										<li><a href="#" class="button next">Join Us</a></li>
+										<li><a href="../recruitment/recruitment.html" class="button next">Join Us</a></li>
 									</ul>
 								</div>
 							</section>
