--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 							<li><a href="./contents/publications/publications.html">Publications</a></li>
 							<li><a href="./contents/members/members.html">Members</a></li>
 							<li><a href="./contents/gallery/gallery.html">Gallery</a></li>
-							<li><a href="recruitment.html">Join us</a></li>
+							<li><a href="./contents/recruitment/recruitment.html">Join us</a></li>
 						</ul>
 					</nav>
 
@@ -103,7 +103,7 @@
 									</header> -->
 									<!-- <p>Some introduction</p> -->
 									<ul class="actions">
-										<li><a href="#.html" class="button next">Join us</a></li>
+										<li><a href="./contents/recruitment/recruitment.html" class="button next">Join us</a></li>
 									</ul>
 								</div>
 							</section>
