--- a/contents/about/about.html
+++ b/contents/about/about.html
@@ -28,7 +28,7 @@
 							<li><a href="../publications/publications.html">Publications</a></li>
 							<li><a href="../awards/awards.html">Awards</a></li>
 							<li><a href="../members/members.html">Members</a></li>
-							<li><a href="../recruitment/">Recruitment</a></li>
+							<li><a href="../recruitment/recruitment.html">Recruitment</a></li>
 						</ul>
 					</nav>
 
