--- a/contents/recruitment/research_assistant.html
+++ b/contents/recruitment/research_assistant.html
@@ -37,13 +37,10 @@
 				<section id="banner" style="background-image: url('./ABRC_bg_img.png');">
 					<div class="inner">
 						<header class="major">
-							<h1>Post-doc</h1>
+							<h1>Research Assistant</h1>
 						</header>
 						<div class="content">
-							<p>Arabidopsis root development</p>
-							<ul class="actions">
-								<li><a href="#one" class="button next scrolly">About us</a></li>
-							</ul>
+							<p>Life Science, Biotechnology, Agriculture</p>
 						</div>
 					</div>
 				</section>
@@ -56,7 +53,7 @@
 						<div class="inner">
 
 							<header>
-								<h1>Research Assistant</h1>
+								<h1>Job Description</h1>
 							</header>
 							
 							<p style="text-indent: 2em;">
